--- a/index.html
+++ b/index.html
@@ -491,7 +491,8 @@ You can help by:</p>
 <section id="donate-us-options" class="donate-page">
   <h2 class="center"> US Donation Options</h2>
    <p>There are two charities in the US which receive and transmit funds for the project to AIU in Kenya. These charities provide tax deductible receipts for donations.</p>
-  <p>The preferred method is through the charity International Generosity, which is affiliated with TrustBridge Global. A second method, if you prefer to use PayPal, is through the charity Christian Leaders for Africa, which is affiliated with AIU.</p>
+  <p>The preferred method is through the charity International Generosity, which is affiliated with TrustBridge Global. A second method, if you prefer to use PayPal, is through the charity Christian Leaders for Africa,
+    which is affiliated with AIU.</p>
   <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:16px; margin-top:20px;">
   <button class="donate-btn-main" onclick="showSection('donation1')" style="display:flex; align-items:center; gap:10px;">
     <img src="images/trustbridge.webp" alt="International Generosity Logo" style="height:24px;">
@@ -507,7 +508,7 @@ You can help by:</p>
     <img src="images/stanbic.webp" alt="Bank Logo" style="height:24px;">
     Bank Transfer 
   </button>
-</div>>
+</div>
   <div class="center" style="margin-top:20px;">
     <button class="donate-btn-main" onclick="showSection('donate-hub')">⬅ Back</button>
   </div>
@@ -517,9 +518,9 @@ You can help by:</p>
 <section id="donate-other-options" class="donate-page">
   <h2 class="center">🌍 Donation Options for Other Countries</h2>
   <p class="center">Select one of the following donation methods:</p>
- <p> Africa International University has an account with Trust Bridge Global which makes it easy to donate from most countries in the world. 
+
+  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:16px; margin-top:20px;"> <p> Africa International University has an account with Trust Bridge Global which makes it easy to donate from most countries in the world. 
    If you are in a country whose laws provide incentives for charitable giving, the Trust Bridge website will guide you through the process of donating.</p>
-  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:16px; margin-top:20px;">
   <button class="donate-btn-main" onclick="showSection('donation2')" style="display:flex; align-items:center; gap:10px;">
       <img src="images/trustbridge.webp" alt="International Generosity Logo" style="height:24px;">
     International Generosity (TrustBridge Global)
@@ -883,6 +884,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
