--- a/index.html
+++ b/index.html
@@ -477,11 +477,16 @@ You can help by:</p>
 <section id="donate-hub" class="donate-page active" style="text-align:center;">
   <h2><strong>Ways to Donate to the Supyire Lexicography Project</strong></h2>
  
-  <p class="center" style="margin-top:12px;"><strong>Are you donating from the US or another country?</strong></p>
+  <p class="center" style="margin-top:12px;"><strong><p style="text-align:center; color:#333; font-weight:600;">
+  If you are donating from the US, click here 👇
+</p></strong></p>
   <div class="center" style="margin-top:16px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
     <button class="donate-btn-main" onclick="showSection('donate-us-options')"> The US</button>
     <button class="donate-btn-main" onclick="showSection('donate-other-options')">🌍 Other Country</button>
-  </div>
+  </div
+  <p style="text-align:center; color:#333; font-weight:600;">
+  <p class="center" style="margin-top:12px;"><strong><p style="text-align:center; color:#333; font-weight:600;"> If you are donating from a country other than the US, click 👇
+</p>
   <div class="center" style="margin-top:20px;">
     <button class="donate-btn-main" onclick="showSection('support')">⬅ Back</button>
   </div>
@@ -884,6 +889,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
