--- a/index.html
+++ b/index.html
@@ -481,12 +481,12 @@ You can help by:</p>
   If you are donating from the US, click here 👇
 </p></strong></p>
   <div class="center" style="margin-top:16px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
-    <button class="donate-btn-main" onclick="showSection('donate-us-options')"> The US</button>
-    <button class="donate-btn-main" onclick="showSection('donate-other-options')">🌍 Other Country</button>
+    <button class="donate-btn-main" onclick="showSection('donate-us-options')"> Donate</button>
+      <p class="center" style="margin-top:12px;"><strong><p style="text-align:center; color:#333; font-weight:600;"> If you are donating from a country other than the US, click 👇
+</p>
+    <button class="donate-btn-main" onclick="showSection('donate-other-options')">🌍 Donate</button>
   </div
   <p style="text-align:center; color:#333; font-weight:600;">
-  <p class="center" style="margin-top:12px;"><strong><p style="text-align:center; color:#333; font-weight:600;"> If you are donating from a country other than the US, click 👇
-</p>
   <div class="center" style="margin-top:20px;">
     <button class="donate-btn-main" onclick="showSection('support')">⬅ Back</button>
   </div>
@@ -889,6 +889,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
