--- a/index.html
+++ b/index.html
@@ -478,11 +478,10 @@ You can help by:</p>
   <h2><strong>Ways to Donate to the Supyire Lexicography Project</strong></h2>
  
   <p class="center" style="margin-top:12px;"><strong><p style="text-align:center; color:#333; font-weight:600;">
-  If you are donating from the US, click here 👇
-</p></strong></p>
+  If you are donating from the US, click here 👇</strong></p>
   <div class="center" style="margin-top:16px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
     <button class="donate-btn-main" onclick="showSection('donate-us-options')"> Donate</button>
-      <p class="center" style="margin-top:12px;"><strong><p style="text-align:center; color:#333; font-weight:600;"> If you are donating from a country other than the US, click 👇
+      <p class="center" style="margin-top:12px;"><strong><p style="text-align:center; color:#333; font-weight:600;"> If you are donating from a country other than the US, click here 👇
 </p>
     <button class="donate-btn-main" onclick="showSection('donate-other-options')">🌍 Donate</button>
   </div
@@ -889,6 +888,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
