--- a/index.html
+++ b/index.html
@@ -481,7 +481,8 @@ You can help by:</p>
   If you are donating from the US, click here 👇</strong></p>
   <div class="center" style="margin-top:16px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
     <button class="donate-btn-main" onclick="showSection('donate-us-options')"> Donate</button>
-   <br><br>   <p class="center" style="margin-top:12px;"><strong><p style="text-align:center; color:#333; font-weight:600;"> If you are donating from a country other than the US, click here 👇
+   <br><br>  
+    <p class="center" style="margin-top:12px;"><strong><p style="text-align:center; color:#333; font-weight:600;"> <Br></Br>If you are donating from a country other than the US, click here 👇
 </p>
     <button class="donate-btn-main" onclick="showSection('donate-other-options')">🌍 Donate</button>
   </div
@@ -888,6 +889,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
