--- a/index.html
+++ b/index.html
@@ -477,15 +477,22 @@ You can help by:</p>
 <section id="donate-hub" class="donate-page active" style="text-align:center;">
   <h2><strong>Ways to Donate to the Supyire Lexicography Project</strong></h2>
  
-  <p class="center" style="margin-top:12px;"><strong><p style="text-align:center; color:#333; font-weight:600;">
-  If you are donating from the US, click here 👇</strong></p>
-  <div class="center" style="margin-top:16px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
-    <button class="donate-btn-main" onclick="showSection('donate-us-options')"> Donate</button>
-   <br><br>  
-    <p class="center" style="margin-top:12px;"><strong><p style="text-align:center; color:#333; font-weight:600;"> <Br></Br>If you are donating from a country other than the US, click here 👇
+ <p class="center" style="margin-top:12px; text-align:center; color:#333; font-weight:600;">
+  If you are donating from the US, click here 👇
 </p>
-    <button class="donate-btn-main" onclick="showSection('donate-other-options')">🌍 Donate</button>
-  </div
+
+<div class="center" style="margin-top:16px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
+  <button class="donate-btn-main" onclick="showSection('donate-us-options')">🇺🇸 Donate</button>
+</div>
+
+<p class="center" style="margin-top:24px; text-align:center; color:#333; font-weight:600;">
+  If you are donating from a country other than the US, click here 👇
+</p>
+
+<div class="center" style="margin-top:12px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
+  <button class="donate-btn-main" onclick="showSection('donate-other-options')">🌍 Donate</button>
+</div>
+
   <p style="text-align:center; color:#333; font-weight:600;">
   <div class="center" style="margin-top:20px;">
     <button class="donate-btn-main" onclick="showSection('support')">⬅ Back</button>
@@ -889,6 +896,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
