--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ main section.active{ display:block; }
   </section>
 
   <!-- ABOUT -->
-  <section id="about">
+  <section id="about the project">
     <h2 class="center">About the Project</h2>
     <p>Supyire is a language spoken by 350,000+ people in southeastern Mali. The New Testament was published in 2008, the Old Testament is currently being translated, and people are being taught to read and write, but as yet there are no dictionaries.
 This project aims to publish a Supyire-French and a Supyire-English dictionary, in both print and digital form, for the use of Supyire speakers and for others who want to use it. We also aim to publish a collection of texts in Supyire that will be available to researchers and will also function as a linguistic and cultural archive of the language and culture.
@@ -451,8 +451,8 @@ You can help by:</p>
   </section>
 
 <!-- ===================== SUPPORT ===================== -->
-<section id="support">
-  <h2 class="center">Support the Project</h2>
+<section id="support our project">
+  <h2 class="center">Support our Project</h2>
   <p class="center">You can support the project through prayer or donations.</p>
 
   <div class="center" style="margin-top:20px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
@@ -896,6 +896,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
